--- a/src/Client/resources/primary.fxml
+++ b/src/Client/resources/primary.fxml
@@ -21,7 +21,7 @@
                     <Insets left="5.0" />
                 </HBox.margin>
             </PasswordField>
-            <Button  text="Подключиться" HBox.hgrow="ALWAYS">
+            <Button onAction="#sendAuth"  text="Подключиться" HBox.hgrow="ALWAYS">
                 <HBox.margin>
                     <Insets left="10.0" />
                 </HBox.margin>
@@ -39,8 +39,8 @@
                 </TextArea>
                 <HBox spacing="10.0">
                     <children>
-                        <TextField fx:id="messageText"  HBox.hgrow="ALWAYS" />
-                        <Button fx:id="sendMessageButton" minWidth="100.0" mnemonicParsing="false"  text="Send" />
+                        <TextField fx:id="messageText" onAction="#sendText" HBox.hgrow="ALWAYS" />
+                        <Button fx:id="sendMessageButton" minWidth="100.0" mnemonicParsing="false" onAction="#sendMessage"  text="Send"  />
                     </children>
                 </HBox>
             </children>
